--- a/style.css
+++ b/style.css
@@ -1,3 +1,492 @@
+/* Navbar CSS */ 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root {
+  --clr-bg-header: #3D8361;
+  --clr-btn: #3D8361;
+  --clr-dropdown: #1C6758;
+  --clr-nav-hover: #1E6F5C;
+  --clr-dropdown-hov: #289672;
+  --clr-dropdown-link-hov: #29BB89;
+  --clr-light: #FAFAFA;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html, body {
+  height: 100%;
+  overflow-x: hidden; /* Prevent horizontal overflow */
+  margin: 0;   /* Remove margin */
+  padding: 0;  /* Remove padding */
+  width: 100%;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+.navbar {
+  width: 100%; /* Ensure full width */
+  margin: 0;   /* Remove any margin */
+  padding: 0;  /* Remove any padding */
+}
+
+
+.navbar header {
+  position: relative;
+  top: 0px;
+  background-color: var(--clr-bg-header);
+  width: 100%;
+  z-index: 1000;
+}
+
+.navbar .container {
+  max-width: 65rem;
+  padding: 0 2rem;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
+}
+
+.navbar .logo-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.navbar .nav-btn {
+  flex: 3;
+  display: flex;
+}
+
+.navbar .nav-links {
+  flex: 2;
+}
+
+.navbar .log-sign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
+.navbar .logo {
+  color: var(--clr-light);
+  font-size: 1.1rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  line-height: 3rem;
+}
+
+.navbar .logo span {
+  font-weight: 300;
+}
+
+.navbar .btn {
+  display: inline-block;
+  padding: .5rem 1.3rem;
+  font-size: .8rem;
+  border: 2px solid var(--clr-light);
+  border-radius: 2rem;
+  line-height: 1;
+  margin: 0 .2rem;
+  transition: .3s;
+  text-transform: uppercase;
+}
+
+.navbar .btn.solid,
+.navbar .btn.transparent:hover {
+  background-color: var(--clr-light);
+  color: var(--clr-btn);
+}
+
+.navbar .btn.transparent,
+.navbar .btn.solid:hover {
+  background-color: transparent;
+  color: var(--clr-light);
+}
+
+.navbar .nav-links > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar .nav-link {
+  position: relative;
+}
+
+.navbar .nav-link > a {
+  line-height: 3rem;
+  color: var(--clr-light);
+  padding: 0 .8rem;
+  letter-spacing: 1px;
+  font-size: .95rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: .5s;
+}
+
+.navbar .nav-link > a > i {
+  margin-left: .2rem;
+}
+
+.navbar .nav-link:hover > a {
+  transform: scale(1.1);
+}
+
+.navbar .dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 10rem;
+  transform: translateY(10px);
+  opacity: 0;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.navbar .dropdown ul {
+  position: relative;
+}
+
+.navbar .dropdown-link > a {
+  display: flex;
+  background-color: var(--clr-light);
+  color: var(--clr-dropdown);
+  padding: .5rem 1rem;
+  font-size: .9rem;
+  align-items: center;
+  justify-content: space-between;
+  transition: .3s;
+}
+
+.navbar .dropdown-link:hover > a {
+  background-color: var(--clr-dropdown);
+  color: var(--clr-light);
+}
+
+.navbar .dropdown-link:not(:nth-last-child(2)) {
+  border-bottom: 1px solid var(--clr-light);
+}
+
+.navbar .dropdown-link i {
+  transform: rotate(-90deg);
+}
+
+.navbar .arrow {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: -5.5px;
+  left: 32px;
+  background-color: var(--clr-light);
+  transform: rotate(45deg);
+  cursor: pointer;
+  transition: .3s;
+  z-index: -1;
+}
+
+.navbar .dropdown-link:first-child:hover ~ .arrow {
+  background-color: var(--clr-dropdown);
+}
+
+.navbar .dropdown-link {
+  position: relative;
+}
+
+.navbar .dropdown.second {
+  top: 0;
+  left: 100%;
+  padding-left: .8rem;
+  cursor: pointer;
+  transform: translateX(10px);
+  width: 15rem;
+}
+
+.navbar .dropdown.second .arrow {
+  top: 10px;
+  left: -5.5px;
+}
+
+.navbar .nav-link:hover > .dropdown,
+.navbar .dropdown-link:hover>.dropdown {
+  transform: translate(0, 0);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.navbar .hamburger-menu-container {
+  flex: 1;
+  display: none;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.navbar .hamburger-menu {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.navbar .hamburger-menu div {
+  width: 1.6rem;
+  height: 3px;
+  border-radius: 3px;
+  background-color: var(--clr-light);
+  position: relative;
+  z-index: 1001;
+  transition: .5s;
+}
+
+.navbar .hamburger-menu div:before,
+.navbar .hamburger-menu div:after {
+  content: '';
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: var(--clr-light);
+  border-radius: 3px;
+  transition: .5s;
+}
+
+.navbar .hamburger-menu div:before {
+  transform: translateY(-7px);
+}
+
+.navbar .hamburger-menu div:after {
+  transform: translateY(7px);
+}
+
+.navbar #check {
+  position: absolute;
+  top: 50%;
+  right: 1.5rem;
+  transform: translateY(-50%);
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 90000;
+  cursor: pointer;
+  opacity: 0;
+  display: none;
+}
+
+.navbar #check:checked ~ .hamburger-menu-container .hamburger-menu div {
+  background-color: transparent;
+}
+
+.navbar #check:checked ~ .hamburger-menu-container .hamburger-menu div:before {
+  transform: translateY(0) rotate(-45deg);
+}
+
+.navbar #check:checked ~ .hamburger-menu-container .hamburger-menu div:after {
+  transform: translateY(0) rotate(45deg);
+}
+
+@keyframes animation {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@media (max-width: 920px) {
+  .navbar .hamburger-menu-container {
+    display: flex;
+  }
+
+  .navbar #check {
+    display: block;
+  }
+
+  .navbar .nav-btn {
+    position: fixed;
+    height: calc(100vh - 3rem);
+    top: 3rem;
+    left: 0;
+    width: 100%;
+    background-color: var(--clr-btn);
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateX(100%);
+    transition: .65s;
+  }
+
+  .navbar #check:checked ~ .nav-btn {
+    transform: translateX(0);
+  }
+
+  .navbar #check:checked ~ .nav-btn .nav-link,
+  .navbar #check:checked ~ .nav-btn .log-sign {
+    animation: animation .5s ease forwards var(--i);
+  }
+
+  .navbar .nav-links {
+    flex: initial;
+    width: 100%;
+  }
+
+  .navbar .nav-links > ul {
+    flex-direction: column;
+  }
+
+  .navbar .nav-link {
+    width: 100%;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
+  .navbar .nav-link > a {
+    line-height: 1;
+    padding: 1.6rem 2rem;
+  }
+
+  .navbar .nav-link:hover > a {
+    transform: scale(1);
+    background-color: var(--clr-nav-hover);
+  }
+
+  .navbar .dropdown,
+  .navbar .dropdown.second {
+    position: initial;
+    top: initial;
+    left: initial;
+    transform: initial;
+    opacity: 1;
+    pointer-events: auto;
+    width: 100%;
+    padding: 0;
+    background-color: var(--clr-dropdown-hov);
+    display: none;
+  }
+
+  .navbar .nav-link:hover > .dropdown,
+  .navbar .dropdown-link:hover>.dropdown {
+    display: block;
+  }
+
+  .navbar .nav-link:hover > a > i,
+  .navbar .dropdown-link:hover>a>i {
+    transform: rotate(360deg);
+  }
+
+  .navbar .dropdown-link > a {
+    background-color: transparent;
+    color: var(--clr-light);
+    padding: 1.2rem 2rem;
+    line-height: 1;
+  }
+
+  .navbar .dropdown.second .dropdown-link > a {
+    padding: 1.2rem 2rem 1.2rem 3rem;
+  }
+
+  .navbar .dropdown.second .dropdown.second .dropdown-link > a {
+    padding: 1.2rem 2rem 1.2rem 4rem;
+  }
+
+  .navbar .dropdown-link:not(:nth-last-child(2)) {
+    border-bottom: none;
+  }
+
+  .navbar .arrow {
+    z-index: 1;
+    background-color: var(--clr-btn);
+    left: 10%;
+    transform: scale(1.1) rotate(45deg);
+    transition: .5s;
+  }
+
+  .navbar .nav-link:hover .arrow {
+    background-color: var(--clr-nav-hover);
+  }
+
+  .navbar .dropdown .dropdown .arrow {
+    display: none;
+  }
+
+  .navbar .dropdown-link:hover > a {
+    background-color: var(--clr-dropdown-link-hov);
+  }
+
+  .navbar .dropdown-link:first-child:hover ~ .arrow {
+    background-color: var(--clr-nav-hover);
+  }
+
+  .navbar .nav-link > a > i {
+    font-size: 1.1rem;
+    transform: rotate(-90deg);
+    transition: .7s;
+  }
+
+  .navbar .dropdown i {
+    font-size: 1rem;
+    transition: .7s;
+  }
+
+  .navbar .log-sign {
+    flex: initial;
+    width: 100%;
+    padding: 1.5rem 1.9rem;
+    justify-content: flex-start;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+}
+
+/* Scroll-to-top button */
+button[data-go-top] {
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    background-color: gray;
+    color: #ffffff;
+    border: none;
+    padding: 12px; /* Adjusted padding for a more compact button */
+    border-radius: 50%; /* Makes the button round */
+    transition: background-color 0.3s, transform 0.3s;
+    display: block;
+    width: 50px; /* Set a fixed width */
+    height: 50px; /* Set a fixed height to ensure the button is circular */
+    display: flex;
+    justify-content: center; /* Centers the icon inside the button */
+    align-items: center; /* Centers the icon vertically */
+}
+
+/* Button hover state */
+button[data-go-top]:hover {
+    background-color: #1d4ed8;
+}
+
+/* Hidden class that controls visibility */
+button[data-go-top].hidden {
+    display: none;
+}
+
 /* Footer Section */
 .custom-footer {
   background: #666;
